--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -85,4 +85,4 @@ form input {
   cursor: pointer;
   padding: 10px 20px;
   cursor: pointer;
-}
+} */
