--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -57,6 +57,7 @@ form input {
   border: none;
   outline: none;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 #display {
@@ -85,4 +86,4 @@ form input {
   cursor: pointer;
   padding: 10px 20px;
   cursor: pointer;
-} */
+}
