--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,84 @@ form input {
   padding: 10px 20px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 520px){
+  .carrier {
+    height: 200px;
+  }
+
+  #display {
+    width: 90%;
+    margin: 100px auto 50px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  form {
+    width: 80%;
+    max-width: 450px;
+    height: 80px;
+    margin: auto;
+    background-color: #500993;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+    gap: 5rem;
+  }
+
+  form input {
+    /* flex: 1; */
+    height: 100%;
+    border: none;
+    background: transparent;
+    color: #fff;
+    outline: none;
+    font-size: 18px;
+    padding: 0 30px;
+  
+  }
+}
+
+@media screen and (max-width: 320px) {
+
+
+  #display {
+    width: 90%;
+    margin: 100px auto 50px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  form {
+    width: 90%;
+    max-width: 600px;
+    height: 80px;
+    margin: auto;
+    background-color: #500993;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+  }
+
+  form input {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    border: none;
+    background: transparent;
+    color: #fff;
+    outline: none;
+    font-size: 18px;
+    padding: 0 30px;
+  
+  }
+
+}
