--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ form input {
 }
 
 ::placeholder {
+  padding-top: 20px;
+  flex-wrap: wrap;
   color: #fff;
   font-size: 18px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -117,7 +119,6 @@ form input {
   }
 
   form input {
-    /* flex: 1; */
     height: 100%;
     border: none;
     background: transparent;
@@ -126,6 +127,20 @@ form input {
     font-size: 18px;
     padding: 0 30px;
   
+  }
+
+  #btn {
+    /* padding: 4 80px; */
+    height: 100%;
+    background-color: #ff1493;
+    cursor: pointer;
+    color: #fff;
+    font-size: 18px;
+    box-shadow: 0,0,0,0 rgba(0, 0, 0, 0.1);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 2px;
   }
 }
 
