--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h1 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+
 body {
   background-color: #852bd9;
   color: #fff;
@@ -40,7 +41,7 @@ form input {
 }
 
 ::placeholder {
-  padding-top: 20px;
+  padding-top: 10px;
   flex-wrap: wrap;
   color: #fff;
   font-size: 18px;
@@ -59,7 +60,7 @@ form input {
   border: none;
   outline: none;
   cursor: pointer;
-  border-radius: 2px;
+  border-radius: 5px;
 }
 
 #display {
@@ -69,6 +70,35 @@ form input {
   gap: 40px;
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+
+#display {
+  background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  /* background-size: 400% 400%; */
+  animation: gradientAnimation 15s ease infinite;
+  transition: transform 0.3s ease-in-out;
+
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* #display {
+} */
+
+#display:hover {
+  transform: scale(1.1);
+}
+
+
 
 #display img {
   width: 100%;
@@ -90,7 +120,8 @@ form input {
   cursor: pointer;
 }
 
-@media screen and (max-width: 520px){
+
+@media screen and (max-width: 650px){
   .carrier {
     height: 200px;
   }
@@ -108,18 +139,19 @@ form input {
   form {
     width: 80%;
     max-width: 450px;
-    height: 80px;
+    height: 50px;
     margin: auto;
     background-color: #500993;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 8px;
-    gap: 5rem;
+    gap: 4rem;
+    padding: 5px;
   }
 
   form input {
-    height: 100%;
+    /* height: 100%; */
     border: none;
     background: transparent;
     color: #fff;
@@ -140,11 +172,15 @@ form input {
     border: none;
     outline: none;
     cursor: pointer;
-    border-radius: 2px;
+    border-radius: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
   }
+
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 385px) {
 
 
   #display {
@@ -167,6 +203,8 @@ form input {
     flex-direction: column;
     align-items: center;
     border-radius: 8px;
+    gap: 5rem;
+
   }
 
   form input {
@@ -178,8 +216,24 @@ form input {
     color: #fff;
     outline: none;
     font-size: 18px;
-    padding: 0 30px;
+    padding: 1 30px;
   
   }
 
+  
+  #btn {
+    background-color: #ff1493;
+    cursor: pointer;
+    color: #fff;
+    font-size: 18px;
+    box-shadow: 0,0,0,0 rgba(0, 0, 0, 0.1);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
 }
+
